--- a/menu3.html
+++ b/menu3.html
@@ -7,48 +7,51 @@
     <title>ohmyfood</title>
 </head>
             <h1>ohmyfood</h1>
-             <h2 id="menu3">le délices des papilles<br>menu</h2>
-                  pour bien commencer
+        <div class="blocpage3">
+             <h2 id="menu3">le délice des papilles</h2>
+                   <img src="menu3_gauche_entree.png" alt="bar">pour bien commencer<img src="menu3_droite_entree.png" alt="bar">
              <div class="element">     
                    <div class="text">tarte de thon assaisonné au yuzu</div>
-                   <div class="prix">55</div>
+                   <div class="prix">55€</div>
              </div> 
              <div class="element">    
                     <div class="text">Bouchée de homard croustillant et sa farandole des petits légumes</div>
-                    <div class="prix">89</div>
+                    <div class="prix">89€</div>
              </div>
              <div class="element">      
                    <div class="text">velouté de crépes aux truffes</div>
-                   <div class="prix">56</div>
+                   <div class="prix">56€</div>
               </div>     
-                 pour bien continuer
+                 <img src="menu3_gauche_plat.png" alt="bar"> pour bien continuer<img src="menu3_droite_plat.png" alt="bar">
             <div class="element">
                 <div class="text">poulet roti aux herbes de provence et ça créme de truffe</div>
-                <div class="prix">110</div>
+                <div class="prix">110€</div>
             </div>
             <div class="element">    
                 <div class="text">langouste rotie et ses légumes de saison</div>
-                <div class="prix">225</div>
+                <div class="prix">225€</div>
             </div> 
             <div class="element" > 
                 <div class="text">cote de beouf angus et sa purée de panais</div>
-                <div class="prix">115</div>
+                <div class="prix">115€</div>
            </div>
-                  pour bien termier
+                  <img src="menu3_gauche_dessert.png" alt="bar">pour bien termier<img src="menu3_droite_dessert.png" alt="bar">
             <div class="element">
                 <div class="text">farandole de desserts de chef</div>
-                <div class="prix">55</div>
+                <div class="prix">55€</div>
             </div>
             <div class="element">   
                 <div class="text">créme brulée revisitée</div>
-                <div class="prix">60</div>
+                <div class="prix">60€</div>
             </div> 
             <div class="element">   
                 <div class="text">tiramisu a la noisette</div>
-                <div class="prix">55</div>
+                <div class="prix">55€</div>
             </div>
+        </div>     
             <div class="footer">
-                <div class="mentions"><a href="mentions.html"> mentions légales</a></div>
-                 <div class="contact"><a href="mailto:Ohmyfood@gmail.com "> contactez-nous</a></div>
+                <div class="mentions"><a href="mentions.html"><span>mentions légales</span></a></div>
+                 <div class="contact"><a href="mailto:Ohmyfood@gmail.com "> <span>contact</span></a></div>
                </div>
+
   </html>          
