--- a/menu4.html
+++ b/menu4.html
@@ -7,48 +7,50 @@
     <title>ohmyfood</title>
 </head>
  <h1>ohmyfood</h1>
-<h2 id="menu4">la pallette du gout<br>menu</h2>
-Esquisse
+ <div class="blocpage4">
+<h2 id="menu4">la pallette du gout</h2>
+ <img src="menu4_gauche.png" alt="bar">esquise<img src="menu4_droite.png" alt="bar">
 <div class="element">
      <div class="text">fricasée d'escargotau piment d'esplette</div>
-     <div class="prix">60</div>
+     <div class="prix">60€</div>
 </div>
 <div class="element"> 
      <div class="text">ouef au plat assaisonné à la truffe sur lit de caviar</div>
-     <div class="prix">55</div>
+     <div class="prix">55€</div>
 </div>
 <div class="element">
      <div class="text">foie gras de canard mi-cuit et ses copeaux de truffe noire</div>
-     <div class="prix">65</div>
+     <div class="prix">65€</div>
 </div>
- Ouvre de maitre
+<img src="menu4_gauche.png" alt="bar">Ouvre de maitre<img src="menu4_droite.png" alt="bar">
      <div class="element">
             <div class="text">filet de boeuf aux herbes accompagnées de sa ribambelle de légumes</div>
-            <div class="prix">70</div>
+            <div class="prix">70€</div>
      </div>
       <div class="element">   
             <div class="text">parmentier de queue de boeuf à la truffe noire sur sa purée de panais</div> 
-            <div class="prix">85</div>
+            <div class="prix">85€</div>
       </div>    
        <div class="element">
              <div class="text">filet de turbot aux agrumes</div>
-             <div class="prix">125</div>
+             <div class="prix">125€</div>
        </div>
- Au sommet de l'art
+       <img src="menu4_gauche.png" alt="bar">Au sommet de l'art<img src="menu4_droite.png" alt="bar">
         <div class="element">
              <div class="text">paris-brest revisité</div> 
-             <div class="prix">55</div>
+             <div class="prix">55€</div>
          </div>    
        <div class="element">
             <div class="text">macaron au chocolat d'exeption et glace à la vanille de madagascar</div>
-            <div class="prix">65</div>
+            <div class="prix">65€</div>
       </div>
       <div class="element">
             <div class="text">Mousse au chocolat au piment d'espelette et à la truffe noire</div>
-            <div class="prix">60</div>
+            <div class="prix">60€</div>
       </div>
+ </div>   
       <div class="footer">
-            <div class="mentions"><a href="mentions.html"> mentions légales</a></div>
-             <div class="contact"><a href="mailto:Ohmyfood@gmail.com "> contactez-nous</a></div>
+            <div class="mentions"><a href="mentions.html"><span> mentions légales</span></a></div>
+             <div class="contact"><a href="mailto:Ohmyfood@gmail.com "><span>contactez-nous</span></a></div>
            </div>
     </html>    
