--- a/mentions.html
+++ b/mentions.html
@@ -7,26 +7,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ohmyfood</h1>
-       <h3>Mentions Légales</h3>
+    <h1>ohmyfood</h1>  
+    <div class="blocpage5">
+       <h4>Mentions Légales</h4>
         <p>Conformément aux dispositions de la loi n° 2004-575 du 21 juin 2004 pour la confiance en l’économie numérique,
  il est précisé aux utilisateurs du site legalplace.fr l’identité des différents intervenants 
 dans le cadre de sa réalisation et de son suivi.</p>
-          <h3>Edition du site</h3>
+          <h4>Edition du site</h4>
 <p>Le site Ohmyfood.fr est édité par la société Ohmyfood, société par actions simplifiée au capital de 10.051,50 euros,
  dont le siège social est situé 7 rue Marcel Dassault, 92100 Boulogne-Billancourt, immatriculée au registre du commerce
  et des sociétés sous le numéro d’identification unique 814 428 785 RCS Nanterre.</p>
-<h3>Nous Contacter</h3>
+<h4>Nous Contacter</h4>
 <p>support@ohmyfood.fr</p>
-<h3>CNIL</h3>
+<h4>CNIL</h4>
 <p>La société Ohmyfood conservera dans ses systèmes informatiques et dans des conditions raisonnables de sécurité une
  preuve de la transaction comprenant le bon de commande et la facture. La société Ohmyfood a fait l’objet d’une
  déclaration à la CNIL sous le numéro 1986932. Conformément aux dispositions de la loi 78-17 du 6 janvier 1978
  modifiée, l’Utilisateur dispose d’un droit d’accès, de modification et de suppression des informations collectées
  par Ohmyfood. Pour exercer ce droit, il reviendra à l’Utilisateur d’envoyer un message à l’adresse suivante :
  support@ohmyfood.fr</p>
+    </div>
  <div class="footer">
-    <div class="mentions"><a href="mentions.html"><span> mentions légales</span></a></div>
+    <div class="pageprincipale"><a href="index.html"><span>page principale</span></a></div>
      <div class="contact"><a href="mailto:Ohmyfood@gmail.com "> <span>contactez-nous</span></a></div>
 </div>
  </body>
