--- a/menu3.html
+++ b/menu3.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="style.css"/>
     <title>ohmyfood</title>
 </head>
+<body>
             <h1>ohmyfood</h1>
+            
         <div class="blocpage3">
-             <h2 id="menu3">le délice des papilles</h2>
-                   <img src="menu3_gauche_entree.png" alt="bar">pour bien commencer<img src="menu3_droite_entree.png" alt="bar">
+             <h5 id="menu3">le délice des papilles</h5>
+                   <img src="menu3_gauche_entree.png" alt="bar"><mark>pour bien commencer</mark><img src="menu3_droite_entree.png" alt="bar">
              <div class="element">     
                    <div class="text">tarte de thon assaisonné au yuzu</div>
                    <div class="prix">55€</div>
@@ -22,7 +24,7 @@
                    <div class="text">velouté de crépes aux truffes</div>
                    <div class="prix">56€</div>
               </div>     
-                 <img src="menu3_gauche_plat.png" alt="bar"> pour bien continuer<img src="menu3_droite_plat.png" alt="bar">
+                 <img src="menu3_gauche_plat.png" alt="bar"><mark> pour bien continuer</mark><img src="menu3_droite_plat.png" alt="bar">
             <div class="element">
                 <div class="text">poulet roti aux herbes de provence et ça créme de truffe</div>
                 <div class="prix">110€</div>
@@ -35,7 +37,7 @@
                 <div class="text">cote de beouf angus et sa purée de panais</div>
                 <div class="prix">115€</div>
            </div>
-                  <img src="menu3_gauche_dessert.png" alt="bar">pour bien termier<img src="menu3_droite_dessert.png" alt="bar">
+                  <img src="menu3_gauche_dessert.png" alt="bar"><mark>pour bien termier</mark><img src="menu3_droite_dessert.png" alt="bar">
             <div class="element">
                 <div class="text">farandole de desserts de chef</div>
                 <div class="prix">55€</div>
@@ -51,7 +53,7 @@
         </div>     
             <div class="footer">
                 <div class="mentions"><a href="mentions.html"><span>mentions légales</span></a></div>
-                 <div class="contact"><a href="mailto:Ohmyfood@gmail.com "> <span>contact</span></a></div>
+                 <div class="contact"><a href="mailto:Ohmyfood@gmail.com "><span>contactez-nous</span></a></div>
                </div>
-
+     </body>
   </html>          
