--- a/menu2.html
+++ b/menu2.html
@@ -50,6 +50,7 @@
 </div>       
              <div class="footer">
                    <div class="mentions"><a href="mentions.html"><span> mentions légales</span></a></div>
+                   <div class="pageprincipale"><a href="index.html"><span>menu principal</span></a></div>
                    <div class="contact"><a href="mailto:Ohmyfood@gmail.com "><span>contactez-nous</span></a></div>
              </div>
 
