--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <title>ohmyfood</title>
 </head>
 <body>
-    <header>
+ <header>
         <h1>ohmyfood</h1>
+ </header>   
+ <section>  
          <div class="container">
-          <a href="menu1.html"><div class="box--1"><i class="fas fa-music"></i><br>la note enchantée<br> menu</div></a>
-          <a href="menu2.html" ><div class="box--2">le chic a la française<br>menu</div></a>
-          <a href="menu3.html"><div class="box--3">délices des papilles<br>menu</div></a>
-          <a href="menu4.html"><div class="box--4">la pallette du gout<br>menu</div></a> 
+          <a href="menu1.html"><div class="box box--1"><i class="fas fa-music"></i><br>la note enchantée<br> menu</div></a>
+          <a href="menu2.html" ><div class="box box--2"><br> chic a la française<br>menu</div></a>
+          <a href="menu3.html"><div class="box box--3">délices des papilles<br>menu</div></a>
+          <a href="menu4.html"><div class="box box--4">la pallette du gout<br>menu</div></a> 
         </div>
-    </header>
+ </section>   
     
       <aside>
                 <div class="btn">prochainement...</div>
