--- a/menu1.html
+++ b/menu1.html
@@ -55,10 +55,11 @@
                   <p>Baba au rhum revisité avec son coulis de citron</p>
                   <p> Tarte au citron meringuée destructurée</p>
               </article>
-                         <strong><i class="fas fa-music"></i>la note enchantée</strong>
+                         <h2><i class="fas fa-music"></i>la note enchantée</h2>
             </div>
                <div class="footer">
                    <div class="mentions"><a href="mentions.html"><span>mentions légales</span></a></div>
+                   <div class="pageprincipale"><a href="index.html"><span>menu principal</span></a></div>
                    <div class="contact"><a href="mailto:Ohmyfood@gmail.com "><span>contactez-nous</span></a></div>
                </div>
         
