--- a/menu4.html
+++ b/menu4.html
@@ -10,7 +10,7 @@
  <h1>ohmyfood</h1>
  <div class="blocpage4">
      
-          <h6 id="menu4">la pallette du gout</h6>
+          <h6 id="menu4">la pallette du goût</h6>
              <img src="menu4_gauche.png" alt="bar"><em>esquise</em><img src="menu4_droite.png" alt="bar"> 
           <div class="element">
                <div class="text">fricasée d'escargotau piment d'esplette</div>
@@ -54,6 +54,7 @@
 
                   <div class="footer">
                           <div class="mentions"><a href="mentions.html"><span> mentions légales</span></a></div>
+                          <div class="pageprincipale"><a href="index.html"><span>menu principal</span></a></div>
                           <div class="contact"><a href="mailto:Ohmyfood@gmail.com "><span>contactez-nous</span></a></div>
                    </div>
           </body>            
