--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
          <div class="container">
           <a href="menu1.html"><div class="box box--1"><i class="fas fa-music"></i><br>la note enchantée<br> menu</div></a>
           <a href="menu2.html" ><div class="box box--2"><br> chic a la française<br>menu</div></a>
-          <a href="menu3.html"><div class="box box--3">délices des papilles<br>menu</div></a>
-          <a href="menu4.html"><div class="box box--4">la pallette du gout<br>menu</div></a> 
+          <a href="menu3.html"><div class="box box--3"><br>délices des papilles<br>menu</div></a>
+          <a href="menu4.html"><div class="box box--4"><br>la pallette du gout<br>menu</div></a> 
         </div>
  </section>   
     
