souligner les sous titre

--- a/mentions.html
+++ b/mentions.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
-    <title>Document</title>
+    <title>Mentions légales</title>
 </head>
 <body>
     <h1>ohmyfood</h1>  
@@ -28,8 +28,9 @@ dans le cadre de sa réalisation et de son suivi.</p>
  support@ohmyfood.fr</p>
     </div>
  <div class="footer">
-    <div class="pageprincipale"><a href="index.html"><span>page principale</span></a></div>
-     <div class="contact"><a href="mailto:Ohmyfood@gmail.com "> <span>contactez-nous</span></a></div>
+   <a href="index.html" title="page principal" >page principal</a>
+   <a href="mailto:Ohmyfood@gmail.com " title="email" >contactez-nous</a>
+  
 </div>
  </body>
  </html>
