--- a/menu2.html
+++ b/menu2.html
@@ -13,7 +13,7 @@
 <article>
        <h3>le chic a la française</h3>
      <div id="menu2">
-          <img src="menu2_droite_entree.png " alt ="bar"><mark>pour se mettre en appétit</mark><img src="menu2_droite_entree.png"alt="bar">
+          <img src="menu2_droite_entree.png " alt ="bar"><span class="chic1">pour se mettre en appétit</span><img src="menu2_droite_entree.png"alt="bar">
            <div class="element">
                <div class="text">tartare de poulpe acidulé aux zests d'orange</div>
                <div class="prix">79€</div>
@@ -26,7 +26,7 @@
                 <div class="text">soupe à l'oignon revisitée</div>
                 <div class="prix">57€</div>
            </div>
-     <img src="menu2_droite_plat.png " alt ="bar"><mark>plaisir des papilles</mark><img src="menu2_droite_plat.png"alt="bar">
+     <img src="menu2_droite_plat.png " alt ="bar"><span class="chic2">plaisir des papilles</span><img src="menu2_droite_plat.png"alt="bar">
             <div class="element">
                   <div class="text">coquilles saint-jaques accompagnées d'une purée de panais</div>
                   <div class="prix">95€</div>
@@ -39,7 +39,7 @@
                   <div class="text">pigeonneau d'ille et vilaine sur son lit de gnocchis aux légumes</div>
                  <div class="prix">175€</div>
             </div>
-         <img src="menu2_droite_dessert.png " alt ="bar"><mark>Gourmandises sucrée</mark><img src="menu2_droite_dessert.png"alt="bar">
+         <img src="menu2_droite_dessert.png " alt ="bar"><span class="chic3">Gourmandises sucrée</span><img src="menu2_droite_dessert.png"alt="bar">
                
                  <p>pétales de vilettes glacés et purée de noisettes</p>
                   <p>fondant au chocolat revisitée</p>
@@ -49,10 +49,9 @@
 </article>   
 </div>       
              <div class="footer">
-                   <div class="mentions"><a href="mentions.html"><span> mentions légales</span></a></div>
-                   <div class="pageprincipale"><a href="index.html"><span>menu principal</span></a></div>
-                   <div class="contact"><a href="mailto:Ohmyfood@gmail.com "><span>contactez-nous</span></a></div>
-             </div>
-
+                <a href="mentions.html" title="Cliquez pour voir les mentions légales" >Mentions légales</a>
+                <a href="index.html" title="page principal" >page principal</a>
+                <a href="mailto:Ohmyfood@gmail.com " title="email" >contactez-nous</a>
+            </div>
     </body>
 </html>
