--- a/menu3.html
+++ b/menu3.html
@@ -11,7 +11,7 @@
             
         <div class="blocpage3">
              <h5 id="menu3">le délice des papilles</h5>
-                   <img src="menu3_gauche_entree.png" alt="bar"><mark>pour bien commencer</mark><img src="menu3_droite_entree.png" alt="bar">
+                   <img src="menu3_gauche_entree.png" alt="bar"><span class="delice1">pour bien commencer</span><img src="menu3_droite_entree.png" alt="bar">
              <div class="element">     
                    <div class="text">tarte de thon assaisonné au yuzu</div>
                    <div class="prix">55€</div>
@@ -24,7 +24,7 @@
                    <div class="text">velouté de crépes aux truffes</div>
                    <div class="prix">56€</div>
               </div>     
-                 <img src="menu3_gauche_plat.png" alt="bar"><mark> pour bien continuer</mark><img src="menu3_droite_plat.png" alt="bar">
+                 <img src="menu3_gauche_plat.png" alt="bar"><span class="delice2"> pour bien continuer</span><img src="menu3_droite_plat.png" alt="bar">
             <div class="element">
                 <div class="text">poulet roti aux herbes de provence et ça créme de truffe</div>
                 <div class="prix">110€</div>
@@ -37,7 +37,7 @@
                 <div class="text">cote de beouf angus et sa purée de panais</div>
                 <div class="prix">115€</div>
            </div>
-                  <img src="menu3_gauche_dessert.png" alt="bar"><mark>pour bien termier</mark><img src="menu3_droite_dessert.png" alt="bar">
+                  <img src="menu3_gauche_dessert.png" alt="bar"><span class="delice3">pour bien termier</span><img src="menu3_droite_dessert.png" alt="bar">
             <div class="element">
                 <div class="text">farandole de desserts de chef</div>
                 <div class="prix">55€</div>
@@ -52,9 +52,9 @@
             </div>
         </div>     
             <div class="footer">
-                <div class="mentions"><a href="mentions.html"><span>mentions légales</span></a></div>
-                <div class="pageprincipale"><a href="index.html"><span>menu principal</span></a></div>
-                 <div class="contact"><a href="mailto:Ohmyfood@gmail.com "><span>contactez-nous</span></a></div>
+                <a href="mentions.html" title="Cliquez pour voir les mentions légales" >Mentions légales</a>
+                <a href="index.html" title="page principal" >page principal</a>
+                <a href="mailto:Ohmyfood@gmail.com " title="email">contactez-nous</a>
                </div>
      </body>
   </html>          
