--- a/menu4.html
+++ b/menu4.html
@@ -11,7 +11,7 @@
  <div class="blocpage4">
      
           <h6 id="menu4">la pallette du goût</h6>
-             <img src="menu4_gauche.png" alt="bar"><em>esquise</em><img src="menu4_droite.png" alt="bar"> 
+             <img src="menu4_gauche.png" alt="bar"><span class="gout1">esquise</span><img src="menu4_droite.png" alt="bar"> 
           <div class="element">
                <div class="text">fricasée d'escargotau piment d'esplette</div>
                <div class="prix">60€</div>
@@ -24,7 +24,7 @@
                  <div class="text">foie gras de canard mi-cuit et ses copeaux de truffe noire</div>
                 <div class="prix">65€</div>
            </div>
-           <img src="menu4_gauche.png" alt="bar"><mark>Ouvre de maitre</mark><img src="menu4_droite.png" alt="bar">
+           <img src="menu4_gauche.png" alt="bar"><span class="gout2">Ouvre de maitre</span><img src="menu4_droite.png" alt="bar">
            <div class="element">
                 <div class="text">filet de boeuf aux herbes accompagnées de sa ribambelle de légumes</div>
                 <div class="prix">70€</div>
@@ -37,7 +37,7 @@
                  <div class="text">filet de turbot aux agrumes</div>
                   <div class="prix">125€</div>
              </div>
-             <img src="menu4_gauche.png" alt="bar"><mark>Au sommet de l'art</mark><img src="menu4_droite.png" alt="bar">
+             <img src="menu4_gauche.png" alt="bar"><span class="gout3">Au sommet de l'art</span><img src="menu4_droite.png" alt="bar">
              <div class="element">
                   <div class="text">paris-brest revisité</div> 
                   <div class="prix">55€</div>
@@ -53,9 +53,9 @@
         </div>
 
                   <div class="footer">
-                          <div class="mentions"><a href="mentions.html"><span> mentions légales</span></a></div>
-                          <div class="pageprincipale"><a href="index.html"><span>menu principal</span></a></div>
-                          <div class="contact"><a href="mailto:Ohmyfood@gmail.com "><span>contactez-nous</span></a></div>
+                    <a href="mentions.html" title="Cliquez pour voir les mentions légales">Mentions légales</a>
+                    <a href="index.html" title="page principal">page principal</a>
+                    <a href="mailto:Ohmyfood@gmail.com " title="email">contactez-nous</a>
                    </div>
           </body>            
     </html>    
