--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </div>
  </section>   
     
-      <section class="proch">
-                  <h2>prochainement<span class="btn">.</span></h2>
-      </section>
+      <div class="box--5">
+                 <em> prochainement<span class="btn">.</span></em>
+      </div>
        
               <div class="footer">
                   <a href="mailto:Ohmyfood@gmail.com " title="email" target="_blank">contactez-nous</a>
