--- a/menu2.html
+++ b/menu2.html
@@ -10,38 +10,38 @@
     <h1>ohmyfood</h1>
      
  <div class="blocpage2"> 
-<article>
+<section>
        <h3>le chic a la française</h3>
        <img src="menu2_droite_entree.png " alt ="bar"><span class="chic1">pour se mettre en appétit</span><img src="menu2_droite_entree.png"alt="bar">
      <div class="menu1">
           
-           <div class="element">
+           <article>
                <div class="text">tartare de poulpe acidulé aux zests d'orange</div>
                <div class="prix">79€</div>
-           </div>         
-            <div class="element">
+           </article>         
+            <article>
               <div class="text">velouté de légumes d'entan</div>
               <div class="prix">57€</div>
-           </div>        
-           <div class="element">
+            </article>        
+           <article>
                 <div class="text">soupe à l'oignon revisitée</div>
                 <div class="prix">57€</div>
-           </div>
+           </article>
      </div>      
      <img src="menu2_droite_plat.png " alt ="bar"><span class="chic2">plaisir des papilles</span><img src="menu2_droite_plat.png"alt="bar">
            <div class="menu2">
-              <div class="element">      
+              <article>      
                   <div class="text">coquilles saint-jaques accompagnées d'une purée de panais</div>
                   <div class="prix">95€</div>
-            </div>
-            <div class="element">
+              </article>
+            <article>
                  <div class="text">magret de canard et parmentier de pommes de terre</div>  
                  <div class="prix">88€</div>
-            </div>
-            <div class="element">
+            </article>
+            <article>
                   <div class="text">pigeonneau d'ille et vilaine sur son lit de gnocchis aux légumes</div>
                  <div class="prix">175€</div>
-            </div>
+            </article>
         </div>
 
          <img src="menu2_droite_dessert.png " alt ="bar"><span class="chic3">Gourmandises sucrée</span><img src="menu2_droite_dessert.png"alt="bar">
@@ -51,11 +51,11 @@
                  <p>millefeuille croustillant</p>
        </div>
     </div>   
-</article>       
-             <div class="footer">
+</section>       
+             <footer>
                 <a href="mentions.html" title="Cliquez pour voir les mentions légales" >Mentions légales</a>
                 <a href="index.html" title="page principal" >page principal</a>
                 <a href="mailto:Ohmyfood@gmail.com " title="email" >contactez-nous</a>
-            </div>
+             </footer>
     </body>
 </html>
