--- a/menu3.html
+++ b/menu3.html
@@ -12,49 +12,49 @@
         <div class="blocpage3">
              <h5 id="menu3">le délice des papilles</h5>
                    <img src="menu3_gauche_entree.png" alt="bar"><span class="delice1">pour bien commencer</span><img src="menu3_droite_entree.png" alt="bar">
-             <div class="element">     
+             <article>     
                    <div class="text">tarte de thon assaisonné au yuzu</div>
                    <div class="prix">55€</div>
-             </div> 
-             <div class="element">    
+             </article> 
+             <article>    
                     <div class="text">Bouchée de homard croustillant et sa farandole des petits légumes</div>
                     <div class="prix">89€</div>
-             </div>
-             <div class="element">      
+             </article>
+             <article>      
                    <div class="text">velouté de crépes aux truffes</div>
                    <div class="prix">56€</div>
-              </div>     
+             </article>     
                  <img src="menu3_gauche_plat.png" alt="bar"><span class="delice2"> pour bien continuer</span><img src="menu3_droite_plat.png" alt="bar">
-            <div class="element">
+            <article>
                 <div class="text">poulet roti aux herbes de provence et ça créme de truffe</div>
                 <div class="prix">110€</div>
-            </div>
-            <div class="element">    
+            </article>
+            <article>    
                 <div class="text">langouste rotie et ses légumes de saison</div>
                 <div class="prix">225€</div>
-            </div> 
-            <div class="element" > 
+            </article> 
+            <article > 
                 <div class="text">cote de beouf angus et sa purée de panais</div>
                 <div class="prix">115€</div>
-           </div>
+            </article>
                   <img src="menu3_gauche_dessert.png" alt="bar"><span class="delice3">pour bien termier</span><img src="menu3_droite_dessert.png" alt="bar">
-            <div class="element">
+            <article>
                 <div class="text">farandole de desserts de chef</div>
                 <div class="prix">55€</div>
-            </div>
-            <div class="element">   
+            </article>
+            <article>   
                 <div class="text">créme brulée revisitée</div>
                 <div class="prix">60€</div>
-            </div> 
-            <div class="element">   
+            </article> 
+            <article>   
                 <div class="text">tiramisu a la noisette</div>
                 <div class="prix">55€</div>
-            </div>
+            </article>
         </div>     
-            <div class="footer">
+            <footer>
                 <a href="mentions.html" title="Cliquez pour voir les mentions légales" >Mentions légales</a>
                 <a href="index.html" title="page principal" >page principal</a>
                 <a href="mailto:Ohmyfood@gmail.com " title="email">contactez-nous</a>
-               </div>
+            </footer>
      </body>
   </html>          
