--- a/menu4.html
+++ b/menu4.html
@@ -12,50 +12,50 @@
      
           <h6 id="menu4">la pallette du goût</h6>
              <img src="menu4_gauche.png" alt="bar"><span class="gout1">esquise</span><img src="menu4_droite.png" alt="bar"> 
-          <div class="element">
+          <article>
                <div class="text">fricasée d'escargotau piment d'esplette</div>
                <div class="prix">60€</div>
-           </div>
-           <div class="element"> 
+          </article>
+           <article> 
                 <div class="text">ouef au plat assaisonné à la truffe sur lit de caviar</div>
                 <div class="prix">55€</div>
-          </div>
-           <div class="element">
+           </article>
+           <article>
                  <div class="text">foie gras de canard mi-cuit et ses copeaux de truffe noire</div>
                 <div class="prix">65€</div>
-           </div>
+           </article>
            <img src="menu4_gauche.png" alt="bar"><span class="gout2">Ouvre de maitre</span><img src="menu4_droite.png" alt="bar">
-           <div class="element">
+           <article>
                 <div class="text">filet de boeuf aux herbes accompagnées de sa ribambelle de légumes</div>
                 <div class="prix">70€</div>
-            </div>
-             <div class="element">   
+           </article>
+             <article>   
                   <div class="text">parmentier de queue de boeuf à la truffe noire sur sa purée de panais</div> 
                   <div class="prix">85€</div>
-             </div>    
-             <div class="element">
+             </article>    
+             <article>
                  <div class="text">filet de turbot aux agrumes</div>
                   <div class="prix">125€</div>
-             </div>
+             </article>
              <img src="menu4_gauche.png" alt="bar"><span class="gout3">Au sommet de l'art</span><img src="menu4_droite.png" alt="bar">
-             <div class="element">
+             <article>
                   <div class="text">paris-brest revisité</div> 
                   <div class="prix">55€</div>
-              </div>    
-              <div class="element">
+             </article>    
+              <article>
                       <div class="text">macaron au chocolat d'exeption et glace à la vanille de madagascar</div>
                      <div class="prix">65€</div>
-               </div>
-               <div class="element">
+              </article>
+               <article>
                      <div class="text">Mousse au chocolat au piment d'espelette et à la truffe noire</div>
                      <div class="prix">60€</div>
-                 </div>
+               </article>
         </div>
 
-                  <div class="footer">
+                  <footer>
                     <a href="mentions.html" title="Cliquez pour voir les mentions légales">Mentions légales</a>
                     <a href="index.html" title="page principal">page principal</a>
                     <a href="mailto:Ohmyfood@gmail.com " title="email">contactez-nous</a>
-                   </div>
+                  </footer>
           </body>            
     </html>    
