--- a/mentions.html
+++ b/mentions.html
@@ -27,10 +27,10 @@ dans le cadre de sa réalisation et de son suivi.</p>
  par Ohmyfood. Pour exercer ce droit, il reviendra à l’Utilisateur d’envoyer un message à l’adresse suivante :
  support@ohmyfood.fr</p>
     </div>
- <div class="footer">
+ <footer>
    <a href="index.html" title="page principal" >page principal</a>
    <a href="mailto:Ohmyfood@gmail.com " title="email" >contactez-nous</a>
   
-</div>
+ </footer>
  </body>
  </html>
