--- a/index.html
+++ b/index.html
@@ -15,16 +15,28 @@
  </header>   
  <section>  
          <div class="container">
-          <div class="box box--1"><a href="menu1.html"><i class="fas fa-music"></i><br>la note enchantée<br> menu</a></div>
-          <div class="box box--2"><a href="menu2.html" >le<br> chic a la française<br>menu</a></div>
-          <div class="box box--3"><a href="menu3.html"><br>délices des papilles<br>menu</a></div>
-          <div class="box box--4"><a href="menu4.html"><br>la pallette du goût<br>menu</a></div> 
+          <div class="box box--1">
+              <a href="menu1.html"><i class="fas fa-music"></i><br>la note enchantée<br>
+                <strong> Menu</strong></a>
+            </div>
+          <div class="box box--2">
+              <a href="menu2.html" ><br>le chic a la française<br>
+                <strong>Menu</strong></a>
+            </div>
+          <div class="box box--3">
+              <a href="menu3.html">le délices des papilles <br>
+              <strong>Menu</strong></a>
+            </div>
+          <div class="box box--4">
+              <a href="menu4.html">la pallette du goût<br>
+                <strong>Menu</strong></a>
+            </div> 
         </div>
  </section>   
     
-      <aside>
+      <div class="box5">
                  <em> prochainement<span class="btn">.</span></em>
-      </aside>
+      </div>
        
               <footer>
                   <a href="mentions.html" title="Cliquez pour voir les mentions légales">Mentions légales</a>
