--- a/menu2.html
+++ b/menu2.html
@@ -12,8 +12,11 @@
  <div class="blocpage2"> 
 <section>
        <h3>le chic a la française</h3>
-       <img src="menu2_droite_entree.png " alt ="bar"><span class="chic1">pour se mettre en appétit</span><img src="menu2_droite_entree.png"alt="bar">
-     <div class="menu1">
+          <aside>
+             <img src="menu2_droite_entree.png " alt ="ligne" class="responsive">
+             <span class="chic1"> pour se mettre en appétit</span><img src="menu2_droite_entree.png"alt="ligne" class="responsive">
+           </aside>
+    <div class="menu1">
           
            <article>
                <div class="text">tartare de poulpe acidulé aux zests d'orange</div>
@@ -28,8 +31,12 @@
                 <div class="prix">57€</div>
            </article>
      </div>      
-     <img src="menu2_droite_plat.png " alt ="bar"><span class="chic2">plaisir des papilles</span><img src="menu2_droite_plat.png"alt="bar">
-           <div class="menu2">
+                  <aside>              
+                        <img src="menu2_droite_plat.png " alt ="bar" >
+                        <span class="chic2">plaisir des papilles</span>
+                        <img src="menu2_droite_plat.png"alt="bar">
+                  </aside>
+        <div class="menu2">
               <article>      
                   <div class="text">coquilles saint-jaques accompagnées d'une purée de panais</div>
                   <div class="prix">95€</div>
@@ -43,9 +50,14 @@
                  <div class="prix">175€</div>
             </article>
         </div>
+          
+                  <aside>
+                            <img src="menu2_droite_dessert.png " alt ="bar" class="responsive">
+                            <span class="chic3">Gourmandises sucrée</span>
+                            <img src="menu2_droite_dessert.png"alt="bar" class="responsive">
+                  </aside>
 
-         <img src="menu2_droite_dessert.png " alt ="bar"><span class="chic3">Gourmandises sucrée</span><img src="menu2_droite_dessert.png"alt="bar">
-        <div class="menu3">     
+       <div class="menu3">     
                  <p>pétales de vilettes glacés et purée de noisettes</p>
                   <p>fondant au chocolat revisitée</p>
                  <p>millefeuille croustillant</p>
