--- a/menu3.html
+++ b/menu3.html
@@ -11,8 +11,10 @@
             
         <div class="blocpage3">
              <h5 id="menu3">le délice des papilles</h5>
-                   <img src="menu3_gauche_entree.png" alt="bar"><span class="delice1">pour bien commencer</span><img src="menu3_droite_entree.png" alt="bar">
-             <article>     
+                 <aside> 
+                    <img src="menu3_gauche_entree.png" alt="bar"><span class="delice1">pour bien commencer</span><img src="menu3_droite_entree.png" alt="bar">
+                  </aside>
+                    <article>     
                    <div class="text">tarte de thon assaisonné au yuzu</div>
                    <div class="prix">55€</div>
              </article> 
@@ -23,9 +25,11 @@
              <article>      
                    <div class="text">velouté de crépes aux truffes</div>
                    <div class="prix">56€</div>
-             </article>     
+             </article> 
+             <aside>    
                  <img src="menu3_gauche_plat.png" alt="bar"><span class="delice2"> pour bien continuer</span><img src="menu3_droite_plat.png" alt="bar">
-            <article>
+            </aside>
+           <article>
                 <div class="text">poulet roti aux herbes de provence et ça créme de truffe</div>
                 <div class="prix">110€</div>
             </article>
@@ -37,7 +41,9 @@
                 <div class="text">cote de beouf angus et sa purée de panais</div>
                 <div class="prix">115€</div>
             </article>
+            <aside>
                   <img src="menu3_gauche_dessert.png" alt="bar"><span class="delice3">pour bien termier</span><img src="menu3_droite_dessert.png" alt="bar">
+            </aside>
             <article>
                 <div class="text">farandole de desserts de chef</div>
                 <div class="prix">55€</div>
