--- a/menu4.html
+++ b/menu4.html
@@ -11,8 +11,10 @@
  <div class="blocpage4">
      
           <h6 id="menu4">la pallette du goût</h6>
+          <aside>
              <img src="menu4_gauche.png" alt="bar"><span class="gout1">esquise</span><img src="menu4_droite.png" alt="bar"> 
-          <article>
+          </aside>
+             <article>
                <div class="text">fricasée d'escargotau piment d'esplette</div>
                <div class="prix">60€</div>
           </article>
@@ -24,8 +26,10 @@
                  <div class="text">foie gras de canard mi-cuit et ses copeaux de truffe noire</div>
                 <div class="prix">65€</div>
            </article>
-           <img src="menu4_gauche.png" alt="bar"><span class="gout2">Ouvre de maitre</span><img src="menu4_droite.png" alt="bar">
-           <article>
+           <aside>
+              <img src="menu4_gauche.png" alt="bar"><span class="gout2">Ouvre de maitre</span><img src="menu4_droite.png" alt="bar">
+           </aside> 
+          <article>
                 <div class="text">filet de boeuf aux herbes accompagnées de sa ribambelle de légumes</div>
                 <div class="prix">70€</div>
            </article>
@@ -37,8 +41,10 @@
                  <div class="text">filet de turbot aux agrumes</div>
                   <div class="prix">125€</div>
              </article>
-             <img src="menu4_gauche.png" alt="bar"><span class="gout3">Au sommet de l'art</span><img src="menu4_droite.png" alt="bar">
-             <article>
+               <aside> 
+               <img src="menu4_gauche.png" alt="bar"><span class="gout3">Au sommet de l'art</span><img src="menu4_droite.png" alt="bar">
+               </aside>
+               <article>
                   <div class="text">paris-brest revisité</div> 
                   <div class="prix">55€</div>
              </article>    
