--- a/menu2.html
+++ b/menu2.html
@@ -10,7 +10,6 @@
     <h1>ohmyfood</h1>
      
  <div class="blocpage2"> 
-<section>
        <h3>le chic a la française</h3>
           <aside>
              <img src="menu2_droite_entree.png " alt ="ligne" class="responsive">
@@ -19,15 +18,15 @@
     <div class="menu1">
           
            <article>
-               <div class="text">tartare de poulpe acidulé aux zests d'orange</div>
+               <p class="text">tartare de poulpe acidulé aux zests d'orange</p>
                <div class="prix">79€</div>
            </article>         
             <article>
-              <div class="text">velouté de légumes d'entan</div>
+              <p class="text">velouté de légumes d'entan</p>
               <div class="prix">57€</div>
             </article>        
            <article>
-                <div class="text">soupe à l'oignon revisitée</div>
+                <p class="text">soupe à l'oignon revisitée</p>
                 <div class="prix">57€</div>
            </article>
      </div>      
@@ -38,15 +37,15 @@
                   </aside>
         <div class="menu2">
               <article>      
-                  <div class="text">coquilles saint-jaques accompagnées d'une purée de panais</div>
+                  <p class="text">coquilles saint-jaques accompagnées d'une purée de panais</p>
                   <div class="prix">95€</div>
               </article>
             <article>
-                 <div class="text">magret de canard et parmentier de pommes de terre</div>  
+                 <p class="text">magret de canard et parmentier de pommes de terre</p>  
                  <div class="prix">88€</div>
             </article>
             <article>
-                  <div class="text">pigeonneau d'ille et vilaine sur son lit de gnocchis aux légumes</div>
+                  <p class="text">pigeonneau d'ille et vilaine sur son lit de gnocchis aux légumes</p>
                  <div class="prix">175€</div>
             </article>
         </div>
@@ -57,13 +56,18 @@
                             <img src="menu2_droite_dessert.png"alt="bar" class="responsive">
                   </aside>
 
-       <div class="menu3">     
-                 <p>pétales de vilettes glacés et purée de noisettes</p>
-                  <p>fondant au chocolat revisitée</p>
-                 <p>millefeuille croustillant</p>
-       </div>
-    </div>   
-</section>       
+       <section class="menu3">     
+           <article>
+                 <p class="text">pétales de vilettes glacés et purée de noisettes</p>
+           </article>
+            <article>
+                  <p class="text">fondant au chocolat revisitée</p>
+            </article>
+            <article>
+                 <p class="text">millefeuille croustillant</p>
+           </article>
+       </section>
+    </div>         
              <footer>
                 <a href="mentions.html" title="Cliquez pour voir les mentions légales" >Mentions légales</a>
                 <a href="index.html" title="page principal" >page principal</a>
