--- a/menu3.html
+++ b/menu3.html
@@ -15,45 +15,45 @@
                     <img src="menu3_gauche_entree.png" alt="bar"><span class="delice1">pour bien commencer</span><img src="menu3_droite_entree.png" alt="bar">
                   </aside>
                     <article>     
-                   <div class="text">tarte de thon assaisonné au yuzu</div>
+                   <p class="text">tarte de thon assaisonné au yuzu</p>
                    <div class="prix">55€</div>
              </article> 
              <article>    
-                    <div class="text">Bouchée de homard croustillant et sa farandole des petits légumes</div>
+                    <p class="text">Bouchée de homard croustillant et sa farandole des petits légumes</p>
                     <div class="prix">89€</div>
              </article>
              <article>      
-                   <div class="text">velouté de crépes aux truffes</div>
+                   <p class="text">velouté de crépes aux truffes</p>
                    <div class="prix">56€</div>
              </article> 
              <aside>    
                  <img src="menu3_gauche_plat.png" alt="bar"><span class="delice2"> pour bien continuer</span><img src="menu3_droite_plat.png" alt="bar">
             </aside>
            <article>
-                <div class="text">poulet roti aux herbes de provence et ça créme de truffe</div>
+                <p class="text">poulet roti aux herbes de provence et ça créme de truffe</p>
                 <div class="prix">110€</div>
             </article>
             <article>    
-                <div class="text">langouste rotie et ses légumes de saison</div>
+                <p class="text">langouste rotie et ses légumes de saison</p>
                 <div class="prix">225€</div>
             </article> 
             <article > 
-                <div class="text">cote de beouf angus et sa purée de panais</div>
+                <p class="text">cote de beouf angus et sa purée de panais</p>
                 <div class="prix">115€</div>
             </article>
             <aside>
                   <img src="menu3_gauche_dessert.png" alt="bar"><span class="delice3">pour bien termier</span><img src="menu3_droite_dessert.png" alt="bar">
             </aside>
             <article>
-                <div class="text">farandole de desserts de chef</div>
+                <p class="text">farandole de desserts de chef</p>
                 <div class="prix">55€</div>
             </article>
             <article>   
-                <div class="text">créme brulée revisitée</div>
+                <p class="text">créme brulée revisitée</p>
                 <div class="prix">60€</div>
             </article> 
             <article>   
-                <div class="text">tiramisu a la noisette</div>
+                <p class="text">tiramisu a la noisette</p>
                 <div class="prix">55€</div>
             </article>
         </div>     
